user scaffold both backend & mohican
Similar to the products scaffold, user is now editable
and navigable using either old school Rails scaffold and
the Mohican UI.

Signed-off-by: zeljko <zeljko@z-ware.fi>

--- a/app/assets/javascripts/app/menu.html
+++ b/app/assets/javascripts/app/menu.html
@@ -19,6 +19,9 @@
         <mn-menu-group-item>
           <mn-menu-item-route>Products</mn-menu-item-route>
         </mn-menu-group-item>
+        <mn-menu-group-item>
+          <mn-menu-item-route>Users</mn-menu-item-route>
+        </mn-menu-group-item>
       </mn-menu-group>
     </mn-navbar-collapsible-left>
   </mn-navbar-collapsible>
