--- a/app/assets/javascripts/app/routes/users-form.html
+++ b/app/assets/javascripts/app/routes/users-form.html
@@ -11,7 +11,7 @@
         </mnf-form>
       </div>
       <div class="control-group spacerT15 block">
-        <a class="btn btn-info" ui-sref="base.users({})">
+        <a class="btn btn-info" ui-sref="users({})">
           Back to grid
         </a>
       </div>
