--- a/app/assets/javascripts/app/routes/activities-form.html
+++ b/app/assets/javascripts/app/routes/activities-form.html
@@ -34,7 +34,7 @@
         </mnf-form>
       </div>
       <div class="control-group spacerT15 block">
-        <a class="btn btn-info" ui-sref="base.activities({})">
+        <a class="btn btn-info" ui-sref="activities({})">
           Back to grid
         </a>
       </div>
