--- a/app/assets/javascripts/app/routes/users-grid.html
+++ b/app/assets/javascripts/app/routes/users-grid.html
@@ -10,7 +10,7 @@
                mn-select-type="check"
                mn-on-select="ctrl.onItemSelect(selectedItems)"
                mn-popup="ctrl.popup(clickedItem, selectedItems)">
-        <a ui-sref="base.users-form({ itemPrimaryKeyId: item[ctrl.primaryKeyName] })">
+        <a ui-sref="users-form({ itemPrimaryKeyId: item[ctrl.primaryKeyName] })">
           <i class="fa fa-file-text-o fa-2x icoNormal"></i>
         </a>
       </mn-grid>
