default route definition - refactoring
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/javascripts/app/routes/start-grid.html
+++ b/app/assets/javascripts/app/routes/start-grid.html
@@ -1,3 +1,7 @@
-<div>
-  start
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-xs-12 col-sm-6 mn-content-panel">
+      Mohican's sample app
+    </div>
+  </div>
 </div>
