--- a/app/assets/javascripts/app/menu.html
+++ b/app/assets/javascripts/app/menu.html
@@ -22,6 +22,9 @@
         <mn-menu-group-item>
           <mn-menu-item-route>Users</mn-menu-item-route>
         </mn-menu-group-item>
+        <mn-menu-group-item>
+          <mn-menu-item-route>Orders</mn-menu-item-route>
+        </mn-menu-group-item>
       </mn-menu-group>
     </mn-navbar-collapsible-left>
   </mn-navbar-collapsible>
