--- a/app/assets/javascripts/app/routes/activities-form.html
+++ b/app/assets/javascripts/app/routes/activities-form.html
@@ -4,6 +4,12 @@
       <span class="loader block" ng-if="!ctrl.itemForm" style="margin: 0px 0px 0px 8px;">Loading...</span>
       <div ng-if="ctrl.itemForm" class="container-fluid">
         <mnf-form mnf-doc="ctrl.itemForm">
+          <div class="col-xs-12 mn-buttons-group">
+            <mnf-edit></mnf-edit>
+            <mnf-commit></mnf-commit>
+            <mnf-rollback></mnf-rollback>
+            <mnf-delete></mnf-delete>
+          </div>
           <mnf-text mnf-field="WorkOrder_WorkOrderNr"
                     mnf-label="Work Order Number:"></mnf-text>
           <mnf-text mnf-field="Customer_CustomerName"
