pass product_ref key to product form link
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/javascripts/app/routes/orders-form.html
+++ b/app/assets/javascripts/app/routes/orders-form.html
@@ -24,7 +24,7 @@
             </mn-tab>
             <mn-tab heading="Products">
               <mn-grid owner="ctrl.productsDrv">
-                <a ui-sref="products-form({ itemPrimaryKeyId: item[ctrl.productsDrv.primaryKeyName] })">
+                <a ui-sref="products-form({ itemPrimaryKeyId: item.product_ref })">
                   <i class="fa fa-file-text-o fa-2x icoNormal"></i>
                 </a>
               </mn-grid>
