--- a/app/assets/javascripts/app/routes/orders-form.html
+++ b/app/assets/javascripts/app/routes/orders-form.html
@@ -10,11 +10,10 @@
             <mnf-rollback></mnf-rollback>
             <mnf-delete></mnf-delete>
           </div>
-          <mnf-text mnf-field="creator_name"
-                    mnf-label="Creator:"></mnf-text>
-          <!-- <a ui-sref="users-form({ itemPrimaryKeyId: ctrl.itemForm.creator_ref })">
-            <i class="fa fa-file-text-o fa-2x icoNormal"></i>
-          </a> -->
+          <mnf-reference mnf-field="creator_name"
+                         mnf-label="Creator:"
+                         mnf-ref-id="creator_ref"
+                         mnf-ref-resource="users"></mnf-reference>
           <mnf-text mnf-field="order_number"
                     mnf-label="Order number:"></mnf-text>
           <mnf-text mnf-field="total"
@@ -48,3 +47,4 @@
     </div>
   </div>
 </div>
+<mn-dialog-sorcerer/>
