--- a/app/assets/javascripts/mohican/directives/mnf-reference/ref-resource-dialog.html
+++ b/app/assets/javascripts/mohican/directives/mnf-reference/ref-resource-dialog.html
@@ -1,7 +1,10 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-xs-12">
-      <mn-grid owner="ctrl.refResourceController">
+      <mn-grid owner="ctrl.refResourceController"
+               mn-select="single"
+               mn-select-type="check"
+               mn-on-select="ctrl.refResourceController.onItemSelect(selectedItems)">
       </mn-grid>
     </div>
   </div>
