--- a/app/assets/javascripts/app/routes/products-grid.html
+++ b/app/assets/javascripts/app/routes/products-grid.html
@@ -6,7 +6,7 @@
   </div>
   <div class="mn-grid-layout-row row">
     <div class="col-xs-12 noPad" style="position: static;">
-      <mn-grid mn-select="single"
+      <mn-grid mn-select="multiple"
                mn-select-type="check"
                mn-on-select="ctrl.onItemSelect(selectedItems)"
                mn-popup="ctrl.popup(clickedItem, selectedItems)">
