save mnf-reference changes
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/javascripts/app/routes/orders-form.html
+++ b/app/assets/javascripts/app/routes/orders-form.html
@@ -13,6 +13,7 @@
           <mnf-reference mnf-field="creator_name"
                          mnf-label="Creator:"
                          mnf-ref-id="creator_ref"
+                         mnf-ref-fields="['name', 'gender']"
                          mnf-ref-resource="users"></mnf-reference>
           <mnf-text mnf-field="order_number"
                     mnf-label="Order number:"></mnf-text>
