--- a/app/assets/javascripts/mohican/directives/mnf-reference/template.html
+++ b/app/assets/javascripts/mohican/directives/mnf-reference/template.html
@@ -8,15 +8,17 @@
 <div ng-if="mnfDoc._state === 'editing' || mnfDoc._state === 'changed' || mnfDoc._state === 'committing'"
      class="form-group form-group-sm mn-form-group">
   <label class="col-sm-4 control-label" for="{{mnfField}}">{{mnfLabel}}</label>
-  <div class="col-sm-8">
-    <span class="mn-form-control"
-          ng-class="{'changed': mnfDoc['_' + mnfField + '_changed']}">
-      {{mnfDoc._edit[mnfField]}}
-    </span>
-    <a class="btn"
-       ng-click="openRefDialog()"
-       ng-disabled="mnfDoc._state === 'committing'">
-      <i class="fa fa-pencil-square-o fa-2x icoNormal"></i>
-    </a>
+  <div class="col-sm-8 state-ready-field-value padding-top-0">
+    <div class="row ref-container"
+         ng-click="openRefDialog()"
+         ng-disabled="mnfDoc._state === 'committing'"
+         ng-class="{'changed': mnfDoc['_' + mnfField + '_changed']}">
+      <span class="col-sm-11 mn-form-control ref-edit-label">
+        {{mnfDoc._edit[mnfField]}}
+      </span>
+      <a class="col-sm-1 btn btn-link">
+        <i class="fa fa-pencil-square-o icoNormal"></i>
+      </a>
+    </div>
   </div>
 </div>
