--- a/app/assets/javascripts/mohican/directives/mnf-reference/ref-resource-dialog.html
+++ b/app/assets/javascripts/mohican/directives/mnf-reference/ref-resource-dialog.html
@@ -1,18 +1,21 @@
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-xs-12">
-      <mn-grid owner="ctrl.refResourceController"
-               mn-select="single"
-               mn-select-type="check"
-               mn-on-select="ctrl.refResourceController.onItemSelect(selectedItems)">
-      </mn-grid>
+<div class="mnf-reference-dialog-container">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-xs-12">
+        <mn-grid owner="ctrl.refResourceController"
+                 mn-select="single"
+                 mn-select-type="check"
+                 mn-on-select="ctrl.refResourceController.onItemSelect(selectedItems)">
+        </mn-grid>
+      </div>
     </div>
   </div>
-</div>
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-xs-12">
-      <button class="btn" ng-click="ctrl.closeDialog()">Close</button>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-xs-12">
+        <button class="btn" ng-click="ctrl.closeDialog()">Close</button>
+      </div>
     </div>
   </div>
+
 </div>
