--- a/app/assets/javascripts/mohican/directives/mnf-reference/ref-resource-dialog.html
+++ b/app/assets/javascripts/mohican/directives/mnf-reference/ref-resource-dialog.html
@@ -13,7 +13,7 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-xs-12">
-        <button class="btn" ng-click="ctrl.closeDialog()">Close</button>
+        <button class="btn ref-dialog-close-btn" ng-click="ctrl.closeDialog()">Close</button>
       </div>
     </div>
   </div>
