--- a/app/assets/javascripts/mohican/directives/mnf-commit-grid/template.html
+++ b/app/assets/javascripts/mohican/directives/mnf-commit-grid/template.html
@@ -1,6 +1,6 @@
 <button class="btn btn-primary"
         ng-disabled="mnfDoc._state === 'editing' || mnfDoc._state === 'committing'"
-        ng-if="currentMnfDoc === mnfDoc && (mnfDoc._state === 'changed' || mnfDoc._state === 'editing' || mnfDoc._state === 'committing')"
+        ng-if="mnfDoc._state === 'changed' || mnfDoc._state === 'editing' || mnfDoc._state === 'committing'"
         ng-click="commitItem()">
   <span ng-style="mnfDoc._state === 'committing' ? {float: 'left'} : {}">save</span>
   <span class="loader"
