--- a/app/assets/javascripts/mohican/directives/mnf-text-grid/template.html
+++ b/app/assets/javascripts/mohican/directives/mnf-text-grid/template.html
@@ -1,4 +1,5 @@
-<div ng-if="mnfDoc._state === 'ready' || mnfDoc._state === 'deleting'">
+<div ng-if="mnfDoc._state === 'ready' || mnfDoc._state === 'deleting'"
+     class="mnf-grid-field-ready">
   <span>
     {{mnfDoc['_' + mnfField + '_formatted']}}
   </span>
