--- a/app/assets/javascripts/mohican/directives/mnf-edit-grid/template.html
+++ b/app/assets/javascripts/mohican/directives/mnf-edit-grid/template.html
@@ -1,4 +1,4 @@
-<button class="btn btn-primary"
-        ng-disabled="mnfDoc._state === 'deleting'"
-        ng-if="mnfDoc._state === 'ready' || mnfDoc._state === 'deleting'"
-        ng-click="editItem()">edit</button>
+<a ng-if="mnfDoc._state === 'ready' || mnfDoc._state === 'deleting'"
+   ng-click="editItem()">
+  <i class="fa fa-pencil-square-o fa-2x icoNormal"></i>
+</a>
