--- a/app/assets/javascripts/mohican/directives/mn-qf-select/template.html
+++ b/app/assets/javascripts/mohican/directives/mn-qf-select/template.html
@@ -1,6 +1,6 @@
 <span is-disabled="qfSelect.qfDisabled"
       isteven-multi-select
-      class="inline-multi-select mn-select-filter"
+      class="success"
       translation="qfSelect.labels"
       input-model="qfSelect.selectItems"
       on-item-click="qfSelect.inputChanged(data.name)"
