--- a/app/assets/javascripts/mohican/directives/mnf-commit-grid/template.html
+++ b/app/assets/javascripts/mohican/directives/mnf-commit-grid/template.html
@@ -1,9 +1,9 @@
 <a ng-click="commitItem()">
   <i class="fa fa-floppy-o fa-2x icoNormal"
-     ng-if="mnfDoc._state === 'changed' || mnfDoc._state === 'editing' || mnfDoc._state === 'committing'"
+     ng-if="mnfFormGridCtrl.mnfCrudShown && (mnfDoc._state === 'changed' || mnfDoc._state === 'editing' || mnfDoc._state === 'committing')"
      ng-click="commitItem()"></i>
   <!-- <span class="loader"
-        ng-if="mnfDoc._state === 'committing'"
+        ng-show="mnfFormGridCtrl.mnfCrudShown && (mnfDoc._state === 'committing')"
         style="display: block; margin-top: -25px;">
   </span> -->
 </a>
