--- a/app/assets/javascripts/mohican/directives/mnf-edit/template.html
+++ b/app/assets/javascripts/mohican/directives/mnf-edit/template.html
@@ -1,4 +1,4 @@
 <button class="btn btn-primary"
         ng-disabled="mnfDoc._state === 'deleting'"
-        ng-if="mnfDoc._state === 'ready' || mnfDoc._state === 'deleting'"
+        ng-if="mnfFormCtrl.mnfCrudShown && (mnfDoc._state === 'ready' || mnfDoc._state === 'deleting')"
         ng-click="mnfDoc.edit()">edit</button>
