--- a/app/assets/javascripts/app/routes/orders-form.html
+++ b/app/assets/javascripts/app/routes/orders-form.html
@@ -15,8 +15,7 @@
                          mnf-ref-resource="users"
                          mnf-ref-id="creator_ref"
                          mnf-field="creator_name"
-                         mnf-field-source="['name', 'gender']"
-                         ></mnf-reference>
+                         mnf-field-source="['name', 'gender']"></mnf-reference>
           <mnf-text mnf-field="order_number"
                     mnf-label="Order number:"></mnf-text>
           <mnf-text mnf-field="total"
