cleanup filter row
Signed-off-by: zeljko <zeljko@z-ware.fi>

--- a/app/assets/javascripts/mohican/directives/mn-grid/template.html
+++ b/app/assets/javascripts/mohican/directives/mn-grid/template.html
@@ -7,7 +7,7 @@
       <col />
     </colgroup>
     <thead>
-      <tr>
+      <tr class="mn-grid-header">
         <th ng-show="grid.showSelectColumn" class="grid-header-container">
           <input type="checkbox" class="baseFont3x"
                  ng-model="grid.onlySelectedItemsShown">
