--- a/app/assets/javascripts/app/routes/products-grid.html
+++ b/app/assets/javascripts/app/routes/products-grid.html
@@ -5,7 +5,7 @@
     </div>
   </div>
   <div class="mn-grid-layout-row row">
-    <div class="col-xs-12 noPad" style="position: static;">
+    <div class="col-xs-12" style="position: static;">
       <mn-grid mn-select="multiple"
                mn-select-type="check"
                mn-on-select="ctrl.onItemSelect(selectedItems)"
