tempfix grid fill height
This fix works only in the grid and is quite inflexible, especially
because of hardcoded bottom height

Signed-off-by: zeljko <zeljko@z-ware.fi>

--- a/app/assets/javascripts/app/routes/products-grid.html
+++ b/app/assets/javascripts/app/routes/products-grid.html
@@ -9,7 +9,8 @@
       <mn-grid mn-select="multiple"
                mn-select-type="check"
                mn-on-select="ctrl.onItemSelect(selectedItems)"
-               mn-popup="ctrl.popup(clickedItem, selectedItems)">
+               mn-popup="ctrl.popup(clickedItem, selectedItems)"
+               mn-grid-fill-height="true">
         <a ui-sref="products-form({ itemPrimaryKeyId: item[ctrl.primaryKeyName] })">
           <i class="fa fa-file-text-o fa-2x icoNormal"></i>
         </a>
