--- a/app/assets/javascripts/mohican/directives/mn-grid/template.html
+++ b/app/assets/javascripts/mohican/directives/mn-grid/template.html
@@ -1,4 +1,4 @@
-<div mn-fill-height class="scrollableHframe" style="">
+<div class="scrollableHframe" style="overflow-y: auto;">
   <table class="table table-striped" style="table-layout:fixed;">
     <colgroup>
       <col ng-show="grid.showSelectColumn" class="vmiddle" style="width: 30px; margin:0 auto;" />
