wide forms - no need to make them narrow
Signed-off-by: zeljko <zeljko@z-ware.fi>

--- a/app/assets/javascripts/app/routes/orders-form.html
+++ b/app/assets/javascripts/app/routes/orders-form.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <div class="row">
-    <div class="col-xs-12 col-sm-6 mn-content-panel">
+    <div class="col-xs-12 mn-content-panel">
       <span class="loader block" ng-if="!ctrl.itemForm" style="margin: 0px 0px 0px 8px;">Loading...</span>
       <div ng-if="ctrl.itemForm" class="container-fluid">
         <mnf-form mnf-doc="ctrl.itemForm"
