--- a/app/assets/javascripts/app/menu.html
+++ b/app/assets/javascripts/app/menu.html
@@ -1,32 +1,76 @@
-<mn-navbar>
-  <mn-navbar-title></mn-navbar-title>
-  <mn-navbar-right>
-    <mn-menu-item>
-      <span>Käyttäjä:</span>
-      <strong>Identoi</strong>
-    </mn-menu-item>
-    <mn-menu-item>(Lopeta)</mn-menu-item>
-  </mn-navbar-right>
-  <mn-navbar-collapsible>
-    <mn-navbar-collapsible-left>
-      <mn-menu-item>
-        <mn-menu-item-route>Start</mn-menu-item-route>
-      </mn-menu-item>
-      <mn-menu-group mn-text="Manage Resources">
-        <mn-menu-group-item>
-          <mn-menu-item-route>Activities</mn-menu-item-route>
-        </mn-menu-group-item>
-        <mn-menu-group-item>
-          <mn-menu-item-route>Products</mn-menu-item-route>
-        </mn-menu-group-item>
-        <mn-menu-group-item>
-          <mn-menu-item-route>Users</mn-menu-item-route>
-        </mn-menu-group-item>
-        <mn-menu-group-item>
-          <mn-menu-item-route>Orders</mn-menu-item-route>
-        </mn-menu-group-item>
-      </mn-menu-group>
-    </mn-navbar-collapsible-left>
-  </mn-navbar-collapsible>
-</mn-navbar>
-<mn-alerts></mn-alerts>
+<div ng-controller="MainCtrl">
+  <nav class="navbar navbar-default" role="navigation">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" ng-init="navCollapsed = true" ng-click="navCollapsed = !navCollapsed">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Brand</a>
+    </div>
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" collapse="navCollapsed">
+      <ul class="nav navbar-nav">
+        <li class="active">
+          <a href="#">Link</a>
+        </li>
+        <li>
+          <a href="#">Link</a>
+        </li>
+        <li class="dropdown" dropdown="">
+          <a href="#" ng-controller="DropdownCtrl" dropdown-toggle="" class="dropdown-toggle" data-toggle="dropdown">Dropdown               <b class="caret"></b>
+          </a>
+          <ul class="dropdown-menu" role="menu">
+            <li>
+              <a href="#">Action</a>
+            </li>
+            <li>
+              <a href="#">Another action</a>
+            </li>
+            <li>
+              <a href="#">Something else here</a>
+            </li>
+            <li>
+              <a href="#">Separated link</a>
+            </li>
+            <li>
+              <a href="#">One more separated link</a>
+            </li>
+          </ul>
+        </li>
+      </ul>
+      <form class="navbar-form navbar-left" role="search">
+        <div class="form-group">
+          <input type="text" class="form-control" placeholder="Search" />
+        </div>
+        <button type="submit" class="btn btn-default">Submit</button>
+      </form>
+      <ul class="nav navbar-nav navbar-right">
+        <li>
+          <a href="#">Link</a>
+        </li>
+        <li class="dropdown" dropdown="">
+          <a href="#" class="dropdown-toggle" dropdown-toggle="" data-toggle="dropdown">Dropdown               <b class="caret"></b>
+          </a>
+          <ul class="dropdown-menu" role="menu">
+            <li>
+              <a href="#">Action</a>
+            </li>
+            <li>
+              <a href="#">Another action</a>
+            </li>
+            <li>
+              <a href="#">Something else here</a>
+            </li>
+            <li>
+              <a href="#">Separated link</a>
+            </li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+    <!-- /.navbar-collapse -->
+  </nav>
+</div>
