--- a/app/assets/javascripts/app/menu.html
+++ b/app/assets/javascripts/app/menu.html
@@ -1,5 +1,5 @@
 <div ng-controller="MainCtrl">
-  <nav class="navbar navbar-default" role="navigation">
+  <nav class="navbar navbar-static-top navbar-inverse container-fluid" role="navigation">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" ng-init="navCollapsed = true" ng-click="navCollapsed = !navCollapsed">
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Brand</a>
+      <a class="navbar-brand" href="#"></a>
     </div>
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" collapse="navCollapsed">
