--- a/app/assets/javascripts/app/menu.html
+++ b/app/assets/javascripts/app/menu.html
@@ -13,59 +13,47 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" collapse="navCollapsed">
       <ul class="nav navbar-nav">
-        <li class="active">
-          <a href="#">Link</a>
-        </li>
-        <li>
-          <a href="#">Link</a>
-        </li>
         <li class="dropdown" dropdown="">
-          <a href="#" ng-controller="DropdownCtrl" dropdown-toggle="" class="dropdown-toggle" data-toggle="dropdown">Dropdown               <b class="caret"></b>
+          <a href="#" dropdown-toggle="" class="dropdown-toggle" data-toggle="dropdown">Main Menu<b class="caret"></b>
           </a>
           <ul class="dropdown-menu" role="menu">
             <li>
-              <a href="#">Action</a>
+              <a href="#/users">Users</a>
             </li>
             <li>
-              <a href="#">Another action</a>
+              <a href="#/products">Products</a>
             </li>
             <li>
-              <a href="#">Something else here</a>
-            </li>
-            <li>
-              <a href="#">Separated link</a>
-            </li>
-            <li>
-              <a href="#">One more separated link</a>
+              <a href="#/orders">Orders</a>
             </li>
           </ul>
         </li>
       </ul>
-      <form class="navbar-form navbar-left" role="search">
+      <form class="navbar-form navbar-left demo-feature" role="search">
         <div class="form-group">
           <input type="text" class="form-control" placeholder="Search" />
         </div>
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
-      <ul class="nav navbar-nav navbar-right">
+      <ul class="nav navbar-nav navbar-right demo-feature">
         <li>
-          <a href="#">Link</a>
+          <a href="#">Right</a>
         </li>
         <li class="dropdown" dropdown="">
-          <a href="#" class="dropdown-toggle" dropdown-toggle="" data-toggle="dropdown">Dropdown               <b class="caret"></b>
+          <a href="#" class="dropdown-toggle" dropdown-toggle="" data-toggle="dropdown">Right drop<b class="caret"></b>
           </a>
           <ul class="dropdown-menu" role="menu">
             <li>
-              <a href="#">Action</a>
+              <a href="#">Right drop 1</a>
             </li>
             <li>
-              <a href="#">Another action</a>
+              <a href="#">Right drop 2</a>
             </li>
             <li>
-              <a href="#">Something else here</a>
+              <a href="#">Right drop 3</a>
             </li>
             <li>
-              <a href="#">Separated link</a>
+              <a href="#">Right drop4</a>
             </li>
           </ul>
         </li>
