--- a/app/assets/javascripts/app/menu.html
+++ b/app/assets/javascripts/app/menu.html
@@ -1,64 +1,62 @@
-<div ng-controller="MainCtrl">
-  <nav class="navbar navbar-static-top navbar-inverse container-fluid" role="navigation">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" ng-init="navCollapsed = true" ng-click="navCollapsed = !navCollapsed">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#"></a>
-    </div>
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" collapse="navCollapsed">
-      <ul class="nav navbar-nav">
-        <li class="dropdown" dropdown="">
-          <a href="#" dropdown-toggle="" class="dropdown-toggle" data-toggle="dropdown">Main Menu<b class="caret"></b>
-          </a>
-          <ul class="dropdown-menu" role="menu">
-            <li>
-              <a href="#/users">Users</a>
-            </li>
-            <li>
-              <a href="#/products">Products</a>
-            </li>
-            <li>
-              <a href="#/orders">Orders</a>
-            </li>
-          </ul>
-        </li>
-      </ul>
-      <form class="navbar-form navbar-left demo-feature" role="search">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search" />
-        </div>
-        <button type="submit" class="btn btn-default">Submit</button>
-      </form>
-      <ul class="nav navbar-nav navbar-right demo-feature">
-        <li>
-          <a href="#">Right</a>
-        </li>
-        <li class="dropdown" dropdown="">
-          <a href="#" class="dropdown-toggle" dropdown-toggle="" data-toggle="dropdown">Right drop<b class="caret"></b>
-          </a>
-          <ul class="dropdown-menu" role="menu">
-            <li>
-              <a href="#">Right drop 1</a>
-            </li>
-            <li>
-              <a href="#">Right drop 2</a>
-            </li>
-            <li>
-              <a href="#">Right drop 3</a>
-            </li>
-            <li>
-              <a href="#">Right drop4</a>
-            </li>
-          </ul>
-        </li>
-      </ul>
-    </div>
-    <!-- /.navbar-collapse -->
-  </nav>
-</div>
+<nav class="navbar navbar-static-top navbar-inverse container-fluid" role="navigation" ng-controller="MainCtrl">
+  <!-- Brand and toggle get grouped for better mobile display -->
+  <div class="navbar-header">
+    <button type="button" class="navbar-toggle" ng-init="navCollapsed = true" ng-click="navCollapsed = !navCollapsed">
+      <span class="sr-only">Toggle navigation</span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+    </button>
+    <a class="navbar-brand" href="#"></a>
+  </div>
+  <!-- Collect the nav links, forms, and other content for toggling -->
+  <div class="collapse navbar-collapse" collapse="navCollapsed">
+    <ul class="nav navbar-nav">
+      <li class="dropdown" dropdown="">
+        <a href="#" dropdown-toggle="" class="dropdown-toggle" data-toggle="dropdown">Main Menu<b class="caret"></b>
+        </a>
+        <ul class="dropdown-menu" role="menu">
+          <li>
+            <a href="#/users">Users</a>
+          </li>
+          <li>
+            <a href="#/products">Products</a>
+          </li>
+          <li>
+            <a href="#/orders">Orders</a>
+          </li>
+        </ul>
+      </li>
+    </ul>
+    <form class="navbar-form navbar-left demo-feature" role="search">
+      <div class="form-group">
+        <input type="text" class="form-control" placeholder="Search" />
+      </div>
+      <button type="submit" class="btn btn-default">Submit</button>
+    </form>
+    <ul class="nav navbar-nav navbar-right demo-feature">
+      <li>
+        <a href="#">Right</a>
+      </li>
+      <li class="dropdown" dropdown="">
+        <a href="#" class="dropdown-toggle" dropdown-toggle="" data-toggle="dropdown">Right drop<b class="caret"></b>
+        </a>
+        <ul class="dropdown-menu" role="menu">
+          <li>
+            <a href="#">Right drop 1</a>
+          </li>
+          <li>
+            <a href="#">Right drop 2</a>
+          </li>
+          <li>
+            <a href="#">Right drop 3</a>
+          </li>
+          <li>
+            <a href="#">Right drop4</a>
+          </li>
+        </ul>
+      </li>
+    </ul>
+  </div>
+  <!-- /.navbar-collapse -->
+</nav>
